Change log for gfsm

v0.0.10 Thu, 04 Dec 2008 15:49:16 +0100
   + fixed underflow bug in gfsm_connect() causing excessive memory allocation on 0-state fsm argument
     - the real problem is in gfsm_bitvector_sized_new(nbits=0), which sets bv[nbits-1]=0
   + added a slew of 'unused' variable attributes (#ifdef __GNUC__ ...), to shut gcc up a bit
   + added configure flag --disable-programs for static builds (e.g. pd-gfsm)
     - ... this can probably go away again
   + gfsmio_getdelim (local implementation): changed handling of GString data buffers
     - formerly, GString data was literally returned as (*lineptr)
     - old behavior breaks perl wrappers (e.g. _compile()) on OpenSuSE 11.0
     - workaround: GString data is copied to a new (char*) locally allocated with malloc()
   + automaton I/O: changed header struct; added hacks for v0.0.9 header detection & parsing
   + fixed an overflow bug in default gfsmio_getdelim() func
   + added at&t-style escaped-string paring function: gfsm_alphabet_att_string_to_labels()
     - wrapper:gfsm_alphabet_generic_string_to_labels()
       ~ choose character-wise or att-style parsing via 'att_mode' flag
     - added '--att-mode', '--map-mode', '--quiet' options to gfsmlabels
   + moved gfsmArcList to a native linked-list type, rather than GSList
     - saves 1 pointer per arc
     - adapted some code from glib/gslist.c (sort, remove_link, etc)
   + moved autoheader config file to gfsmAutoConfig.h
     - added header-safe gfsmConfig.h hack to "safely" read in autoheader config
     - requires clobbering any existing autoheader type macros with gfsmNoConfig.h
       ~ there are better ways of doing this (e.g. sed), but this should suffice for most purposes
   + altered behavior of gfsm_automaton_copy_shallow(), gfsm_automaton_shadow()
     - root state id is no longer copied: not considered 'shallow' data
   + moved most simple accessor function code from macros to 'static inline' defined in *.hi