@@ -154,6 +154,9 @@ Specify one of the following:
  real
  trivial
  tropical
+ arctic
+ fuzzy
+ prob
 
 
 
