@@ -128,6 +128,9 @@ Specify one of the following:
  real
  trivial
  tropical
+ arctic
+ fuzzy
+ prob
 
 
 
