@@ -4,7 +4,7 @@
  * Author: Bryan Jurish <moocow@ling.uni-potsdam.de>
  * Description: finite state machine library: semirings: inline definitions
  *
- * Copyright (c) 2004-2007 Bryan Jurish.
+ * Copyright (c) 2004-2009 Bryan Jurish.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -82,6 +82,12 @@ void gfsm_semiring_init(gfsmSemiring *sr, gfsmSRType type)
     sr->zero = FLT_MAX;
     sr->one  = 0;
     break;
+  case gfsmSRTArctic:
+    sr->zero = -FLT_MAX;
+    sr->one  = 0;
+    break;
+  case gfsmSRTFuzzy:
+  case gfsmSRTProb:
   case gfsmSRTReal:
   default:
     sr->zero = 0;
@@ -179,11 +185,11 @@ gboolean gfsm_sr_less(gfsmSemiring *sr, gfsmWeight x, gfsmWeight y)
 {
   switch (sr->type) {
   case gfsmSRTLog:
-  case gfsmSRTTropical: return (x < y);
+  case gfsmSRTTropical:
+    return (x < y);
 
-  case gfsmSRTPLog: return (x > y);
-
-  case gfsmSRTTrivial:  return 0;
+  case gfsmSRTTrivial: 
+    return 0;
 
   case gfsmSRTUser:
     if (((gfsmUserSemiring*)sr)->less_func)
@@ -191,7 +197,12 @@ gboolean gfsm_sr_less(gfsmSemiring *sr, gfsmWeight x, gfsmWeight y)
 
   case gfsmSRTBoolean:
   case gfsmSRTReal:
-  default:             return (x > y);
+  case gfsmSRTPLog:
+  case gfsmSRTArctic:
+  case gfsmSRTFuzzy:
+  case gfsmSRTProb:
+  default:
+    return (x > y);
   }
   return FALSE; //-- should never happen
 }
@@ -208,6 +219,8 @@ gfsmWeight gfsm_sr_plus(gfsmSemiring *sr, gfsmWeight x, gfsmWeight y)
   case gfsmSRTLog:      return -gfsm_log_add(-x,-y);
   case gfsmSRTPLog:     return  gfsm_log_add( x, y);
   case gfsmSRTTropical: return (x < y ? x : y);
+  case gfsmSRTArctic:
+  case gfsmSRTFuzzy:    return (x > y ? x : y);
   case gfsmSRTTrivial:  return 0;
 
   case gfsmSRTUser:
@@ -215,6 +228,7 @@ gfsmWeight gfsm_sr_plus(gfsmSemiring *sr, gfsmWeight x, gfsmWeight y)
       return (*((gfsmUserSemiring*)sr)->plus_func)(sr,x,y);
 
   case gfsmSRTReal:
+  case gfsmSRTProb:
   default:             return x + y;
   }
   return sr->zero; //-- should never happen
@@ -230,7 +244,9 @@ gfsmWeight gfsm_sr_times(gfsmSemiring *sr, gfsmWeight x, gfsmWeight y)
   case gfsmSRTBoolean:  return x && y;
   case gfsmSRTLog:      
   case gfsmSRTPLog:
-  case gfsmSRTTropical: return x + y;
+  case gfsmSRTTropical: 
+  case gfsmSRTArctic:   return x + y;
+  case gfsmSRTFuzzy:    return (x < y ? x : y);
   case gfsmSRTTrivial:  return 0;
 
   case gfsmSRTUser:
@@ -238,6 +254,7 @@ gfsmWeight gfsm_sr_times(gfsmSemiring *sr, gfsmWeight x, gfsmWeight y)
       return (*((gfsmUserSemiring*)sr)->times_func)(sr,x,y);
 
   case gfsmSRTReal:
+  case gfsmSRTProb:
   default:             return x * y;
   }
   return sr->zero; //-- should never happen
