@@ -3,7 +3,7 @@
  * File: gfsmcompile_cmdparser.c
  * Description: Code for command-line parser struct gengetopt_args_info.
  *
- * File autogenerated by optgen.perl version 0.05
+ * File autogenerated by optgen.perl version 0.06
  * generated with the following command:
  * /usr/local/bin/optgen.perl -u -l --no-handle-rcfile --nopod -F gfsmcompile_cmdparser gfsmcompile.gog
  *
@@ -52,10 +52,6 @@
 # include <getopt.h>
 #endif
 
-#if !defined(HAVE_STRDUP) && !defined(strdup)
-# define strdup gengetopt_strdup
-#endif /* HAVE_STRDUP */
-
 #include "gfsmcompile_cmdparser.h"
 
 
@@ -98,11 +94,13 @@ cmdline_parser_print_help (void)
   printf("   -FFILE    --output=FILE      Specifiy output file (default=stdout).\n");
 }
 
-#if !defined(HAVE_STRDUP) && !defined(strdup)
-/* gengetopt_strdup(): automatically generated from strdup.c. */
+#if defined(HAVE_STRDUP) || defined(strdup)
+# define gog_strdup strdup
+#else
+/* gog_strdup(): automatically generated from strdup.c. */
 /* strdup.c replacement of strdup, which is not standard */
 static char *
-gengetopt_strdup (const char *s)
+gog_strdup (const char *s)
 {
   char *result = (char*)malloc(strlen(s) + 1);
   if (result == (char*)0)
@@ -120,9 +118,9 @@ clear_args(struct gengetopt_args_info *args_info)
   args_info->ilabels_arg = NULL; 
   args_info->olabels_arg = NULL; 
   args_info->slabels_arg = NULL; 
-  args_info->semiring_arg = strdup("tropical"); 
+  args_info->semiring_arg = gog_strdup("tropical"); 
   args_info->compress_arg = -1; 
-  args_info->output_arg = strdup("-"); 
+  args_info->output_arg = gog_strdup("-"); 
 }
 
 
@@ -201,7 +199,7 @@ cmdline_parser (int argc, char * const *argv, struct gengetopt_args_info *args_i
       args_info->inputs_num = argc - optind ;
       args_info->inputs = (char **)(malloc ((args_info->inputs_num)*sizeof(char *))) ;
       while (optind < argc)
-        args_info->inputs[ i++ ] = strdup (argv[optind++]) ; 
+        args_info->inputs[ i++ ] = gog_strdup (argv[optind++]) ; 
   }
 
   return 0;
@@ -256,7 +254,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
           }
           args_info->ilabels_given++;
           if (args_info->ilabels_arg) free(args_info->ilabels_arg);
-          args_info->ilabels_arg = strdup(val);
+          args_info->ilabels_arg = gog_strdup(val);
           break;
         
         case 'o':	 /* Specify output (upper) labels file. */
@@ -265,7 +263,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
           }
           args_info->olabels_given++;
           if (args_info->olabels_arg) free(args_info->olabels_arg);
-          args_info->olabels_arg = strdup(val);
+          args_info->olabels_arg = gog_strdup(val);
           break;
         
         case 'S':	 /* Specify state labels file. */
@@ -274,7 +272,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
           }
           args_info->slabels_given++;
           if (args_info->slabels_arg) free(args_info->slabels_arg);
-          args_info->slabels_arg = strdup(val);
+          args_info->slabels_arg = gog_strdup(val);
           break;
         
         case 's':	 /* Specify semiring type. */
@@ -283,7 +281,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
           }
           args_info->semiring_given++;
           if (args_info->semiring_arg) free(args_info->semiring_arg);
-          args_info->semiring_arg = strdup(val);
+          args_info->semiring_arg = gog_strdup(val);
           break;
         
         case 'z':	 /* Specify compression level of output file. */
@@ -300,7 +298,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
           }
           args_info->output_given++;
           if (args_info->output_arg) free(args_info->output_arg);
-          args_info->output_arg = strdup(val);
+          args_info->output_arg = gog_strdup(val);
           break;
         
         case 0:	 /* Long option(s) with no short form */
@@ -343,7 +341,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
             }
             args_info->ilabels_given++;
             if (args_info->ilabels_arg) free(args_info->ilabels_arg);
-            args_info->ilabels_arg = strdup(val);
+            args_info->ilabels_arg = gog_strdup(val);
           }
           
           /* Specify output (upper) labels file. */
@@ -353,7 +351,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
             }
             args_info->olabels_given++;
             if (args_info->olabels_arg) free(args_info->olabels_arg);
-            args_info->olabels_arg = strdup(val);
+            args_info->olabels_arg = gog_strdup(val);
           }
           
           /* Specify state labels file. */
@@ -363,7 +361,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
             }
             args_info->slabels_given++;
             if (args_info->slabels_arg) free(args_info->slabels_arg);
-            args_info->slabels_arg = strdup(val);
+            args_info->slabels_arg = gog_strdup(val);
           }
           
           /* Specify semiring type. */
@@ -373,7 +371,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
             }
             args_info->semiring_given++;
             if (args_info->semiring_arg) free(args_info->semiring_arg);
-            args_info->semiring_arg = strdup(val);
+            args_info->semiring_arg = gog_strdup(val);
           }
           
           /* Specify compression level of output file. */
@@ -392,7 +390,7 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
             }
             args_info->output_given++;
             if (args_info->output_arg) free(args_info->output_arg);
-            args_info->output_arg = strdup(val);
+            args_info->output_arg = gog_strdup(val);
           }
           
           else {
@@ -451,10 +449,10 @@ cmdline_parser_read_rcfile(const char *filename,
     strcpy(fullname, pwent->pw_dir);
     strcat(fullname, filename+1);
   } else {
-    fullname = strdup(filename);
+    fullname = gog_strdup(filename);
   }
 #else /* !(defined(HAVE_GETUID) && defined(HAVE_GETPWUID)) */
-  fullname = strdup(filename);
+  fullname = gog_strdup(filename);
 #endif /* defined(HAVE_GETUID) && defined(HAVE_GETPWUID) */
 
   /* try to open */
