@@ -54,6 +54,9 @@ Specify one of the following:
  real
  trivial
  tropical
+ arctic
+ fuzzy
+ prob
 
 "
 
