@@ -49,6 +49,9 @@ Specify one of the following:
  real
  trivial
  tropical
+ arctic
+ fuzzy
+ prob
 
 "
 
