@@ -3,7 +3,7 @@
  * File: gfsmconvert_cmdparser.h
  * Description: Headers for command-line parser struct gengetopt_args_info.
  *
- * File autogenerated by optgen.perl version 0.05.
+ * File autogenerated by optgen.perl version 0.06.
  *
  */
 
